trunk/Archive2/49/f3dee83ef8dd6f/output
main.cpp: In function 'int main()':
main.cpp:20:5: error: 'couwords' is not a member of 'std'
     std::couwords << std::endl;
     ^
